delete pdfs and update

--- a/refs.bib
+++ b/refs.bib
@@ -799,3 +799,48 @@
 	annote = {Comment: First Workshop on Neural Machine Translation, 2017},
 	file = {PDF:/home/polyester/Zotero/storage/I3342N2A/Freitag and Al-Onaizan - 2017 - Beam Search Strategies for Neural Machine Translation.pdf:application/pdf},
 }
+
+@misc{pytorch_contributors_torchutilscheckpoint_2024,
+	title = {torch.utils.checkpoint — {PyTorch} 2.6 documentation},
+	url = {https://pytorch.org/docs/stable/checkpoint.html},
+	urldate = {2025-03-21},
+	author = {PyTorch Contributors},
+	year = {2024},
+	file = {torch.utils.checkpoint — PyTorch 2.6 documentation:/home/polyester/Zotero/storage/NUY7DYZM/checkpoint.html:text/html},
+}
+
+@inproceedings{noauthor_notitle_nodate,
+}
+
+@inproceedings{pennington_glove_2014,
+	address = {Doha, Qatar},
+	title = {Glove: {Global} {Vectors} for {Word} {Representation}},
+	shorttitle = {Glove},
+	url = {http://aclweb.org/anthology/D14-1162},
+	doi = {10.3115/v1/D14-1162},
+	abstract = {Recent methods for learning vector space representations of words have succeeded in capturing ﬁne-grained semantic and syntactic regularities using vector arithmetic, but the origin of these regularities has remained opaque. We analyze and make explicit the model properties needed for such regularities to emerge in word vectors. The result is a new global logbilinear regression model that combines the advantages of the two major model families in the literature: global matrix factorization and local context window methods. Our model efﬁciently leverages statistical information by training only on the nonzero elements in a word-word cooccurrence matrix, rather than on the entire sparse matrix or on individual context windows in a large corpus. The model produces a vector space with meaningful substructure, as evidenced by its performance of 75\% on a recent word analogy task. It also outperforms related models on similarity tasks and named entity recognition.},
+	language = {en},
+	urldate = {2025-04-02},
+	booktitle = {Proceedings of the 2014 {Conference} on {Empirical} {Methods} in {Natural} {Language} {Processing} ({EMNLP})},
+	publisher = {Association for Computational Linguistics},
+	author = {Pennington, Jeffrey and Socher, Richard and Manning, Christopher},
+	year = {2014},
+	pages = {1532--1543},
+	file = {PDF:/home/polyester/Zotero/storage/JI46WE7D/Pennington et al. - 2014 - Glove Global Vectors for Word Representation.pdf:application/pdf},
+}
+
+@misc{mikolov_efficient_2013,
+	title = {Efficient {Estimation} of {Word} {Representations} in {Vector} {Space}},
+	url = {http://arxiv.org/abs/1301.3781},
+	doi = {10.48550/arXiv.1301.3781},
+	abstract = {We propose two novel model architectures for computing continuous vector representations of words from very large data sets. The quality of these representations is measured in a word similarity task, and the results are compared to the previously best performing techniques based on different types of neural networks. We observe large improvements in accuracy at much lower computational cost, i.e. it takes less than a day to learn high quality word vectors from a 1.6 billion words data set. Furthermore, we show that these vectors provide state-of-the-art performance on our test set for measuring syntactic and semantic word similarities.},
+	language = {en},
+	urldate = {2025-04-02},
+	publisher = {arXiv},
+	author = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+	month = sep,
+	year = {2013},
+	note = {arXiv:1301.3781 [cs]},
+	keywords = {Computer Science - Computation and Language},
+	file = {PDF:/home/polyester/Zotero/storage/2JR7DA26/Mikolov et al. - 2013 - Efficient Estimation of Word Representations in Vector Space.pdf:application/pdf},
+}
