--- a/report.tex
+++ b/report.tex
@@ -75,7 +75,7 @@ For a stable activation flow, we need
 \end{align}
 where $c$ is a constant w.r.t (with respect to) $g$. $f$ is a linear function w.r.t $g$, unlike $\tanh$ that is used with conventional RNNs. Deep network layers need to have nonlinear components as well. Therefore, Hochreiter et al. decided to use nonlinear activations in the input $g(x_{t-\tau})$ itself. Each nonlinear structure is called a \textit{gate}. This overall layer is called LSTM (long short-term memory) and could be stacked just like a standard RNN layer \cite{hochreiter_long_1997}. Some works stack two inverted RNN layers in order to enable the network to see future tokens as well as the past ones, called BiRNN (bidirectional RNN).
 
-At the time, the NLP (natural language processing) community used a stack of RNN layers that grabs the contextual information out of the input (\textit{encoder}), and another stack of layers that processed this information for the output (\textit{decoder}) for tasks involving sequence transformation (i.e. translation). The current token is accepted at each layer, whereas the decoder layer output is used as the prediction for the next token.
+At the time, the NLP (natural language processing) community used a stack of RNN layers that grabs the contextual information out of the input (\textit{encoder}), and another stack of layers that processes this information for the output (\textit{decoder}) for tasks involving sequence transformation (i.e. translation). The current token is accepted at each layer, whereas the decoder layer output is used as the prediction for the next token. NNs cannot work with string inputs. Therefore, they need to be converted into numbers (\textit{embedding}). Maybe the simplest method is to use a vector with length of vocabulary size having 1 only at the index of the target word (\textit{one-hot encoding}). These vectors are sparse (most of the entries are not used). Furthermore, the complexity grows with the vocabulary size. Instead, one can make these large sparse vectors to much smaller and denser. One may use heuristics to accomplish this. Two of these are that homonyms may have different meanings depending of the words surrounding them (1), and words can have semantic similarities independent of their spelling (2). \textit{word2vec} tackles (1) by training two types of NNs that predict the target word via its surroundings and vice-versa \cite{mikolov_efficient_2013}. \textit{GloVe} on the other hand is proposed for (2), looking at the co-occurence probabilities of each pair $k, l$ as a measure of relevance ($P(k|l)$), incorporating them in a loss function to train learning models \cite{pennington_glove_2014}.     
 
 Having different variants, \textit{(cross) attention} between vectors $a, b$ is (with a similarity matrix $S$)
 
@@ -90,7 +90,7 @@ Bahdanau et al. obtain candidate vectors at each layer of a gated BiRNN encoder 
 
 Lastly, it is important to mention two different training modes for RNNs. When training at the current step, we could feed the current label (correct output) to the network. This is called \textit{teacher forcing} as the name implies. When generating its own output, the network does not have the labels. Teacher forcing resembles spoon learning in an informal sense. There is an alternative called \textit{curriculum learning} that feeds the network its current prediction as the next token. This approach is slower yet achieves better results \cite{lapan_deep_2020}.
 \subsubsection{Transformers}
-The transformers paper (Vaswani et al.) brought a new paradigm. The first transformer uses an architecture similar to the aforementioned encoder-decoder (\textit{seq2seq}) model. Transformer encoder and decoder blocks process the inputs in parallel unlike RNNs' which operates sequentially. In order to obtain a single output token, the last decoder layer is connected to a FFN (feed forward neural network). The parallelism enables a different attention mechanism at each layer, where the sentence would be compared to itself (self-attention). This allows for faster inference. However, due to its parallel nature, the cross-attention in decoder layers may include future tokens as well. We are not interested in the future tokens that are not available yet, hence the parts corresponding to them are masked \cite{vaswani_attention_2023}. 
+The transformers paper (Vaswani et al.) brought a new paradigm. The first transformer uses an architecture similar to the aforementioned encoder-decoder (\textit{seq2seq}) model. Transformer encoder and decoder blocks process the inputs in parallel unlike RNNs' which operates sequentially. In order to obtain a single output token, the last decoder layer is connected to a FFN (feed forward neural network). The parallelism enables a different attention mechanism at each layer, where the sentence would be compared to itself (self-attention). This allows for faster inference. The attention layers create context-aware embeddings with each entry being composed of words weighted by their similarity to other words. The produced similarity matrix also gives the co-occurrence of words. In this regard, transformers tackle both aforementioned embedding problems (1) and (2), hence a random embedding still gives a good performance. However, due to its parallel nature, the cross-attention in decoder layers may include future tokens as well. We are not interested in the future tokens that are not available yet, hence the parts corresponding to them are masked \cite{vaswani_attention_2023}. 
 
 The transformer boom brought different variants. BERT (Bidirectional Encoder Representations from Transformers, Devlin et al.) is the encoder part of the transformer. It is trained on two tasks. The first task is MLM (masked language modeling) where the network is trained to predict a number of masked tokens for each given sentence. In a typical transformer layer, the future tokens also see the past tokens. In the following layers the current token would indirectly link to itself and the similarity matrix entry corresponding to it would have the highest activation (which is reasonable as it is the same token). Masking the tokens prevents this phenomenon. There is also NSP (next sentence prediction) task where the network is trained to predict the next sentence as the name implies. The authors claim and show, the same \textit{pretrained} network excels at wide range of tasks "such as question answering and language inference" after only little more training, called \textit{fine-tuning} \cite{devlin_bert_2019}. Due to requiring less compute-time, fine-tuning becomes a widely adopted method in the community. GPT (Generative Pretrained Transformer, Radford et al.) on the other hand, uses the decoder part of the transformer \cite{radford_improving_2018}. Three branches (encoder only, decoder only and encoder-decoder) of transformers continue developing. 
 
